# neotomapydoi

./: .env-template  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.py  mkdocs.yml  ndbdoi.py  neotomadoi.yaml  pyproject.toml
docs/: index.md  neotomadoi_JOSS.md  paper.bib  references.md
src/neotomadoi/: __init__.py  activity.py  credentials.py  databaseMode.py  dataciteTestMode.py  fetch_metadata.py  neo_connect.py  neo_contributors.py  neo_creators.py  neo_dates.py  neo_description.py  neo_identifier.py  neo_location.py  neo_relatedIdentifiers.py  neo_size.py  neo_subjects.py  neo_title.py  neotomaDOI.py  testMode.py
src/neotomadoi/sql/: ds_datasetids.sql  ds_timeslice.sql
tests/: conftest.py  test_activity.py  test_credentials.py  test_doiinit.py  test_freeze_data.py  test_meta_fail.py  test_mint_doi.py  test_neo_sizes.py  test_update_meta.py  test_validate.py
