[project]
name = "neotomadoi"
version = "0.1.0"
description = "Minting process for the Neotoma Paleoecology Database's DOIs using the DataCite API and the Neotoma API."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files=["LICENSE.md"]
authors = [
    { name = "Simon Goring", email = "goring@wisc.edu", orcid = "https://orcid.org/0000-0002-2700-4605" }
]
maintainers = [
    { name = "Simon Goring", email = "goring@wisc.edu", orcid = "https://orcid.org/0000-0002-2700-4605" }
]
requires-python = ">=3.12"
keywords=["DataCite", "Postgresql", "metadata", "Open Science"]
classifiers=["Development Status :: 4 - Beta", 
             "Framework :: Hatch",
             "Framework :: Pytest",
             "Intended Audience :: Science/Research",
             "License :: OSI Approved :: MIT License",
             "Operating System :: POSIX :: Linux",
             "Programming Language :: Python :: 3.12",
             "Programming Language :: SQL",
             "Topic :: Database",
             "Topic :: Scientific/Engineering"]
dependencies = [
    "argparse>=1.4.0",
    "datacite>=1.2.0",
    "deepdiff>=8.4.2",
    "jsonschema>=4.23.0",
    "mkdocs-material>=9.6.16",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.0",
    "psycopg2>=2.9.10",
    "pyalex>=0.18",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "setuptools>=79.0.0",
    "shapely>=2.1.0",
]

[project.urls]
source = "https://github.com/NeotomaDB/neotomapydoi"
funding = "https://nsf.gov/awardsearch/showAward?AWD_ID=2410961"
Issues = "https://github.com/NeotomaDB/neotomapydoi/issues"
download = "https://github.com/NeotomaDB/neotomapydoi/archive/refs/heads/main.zip"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--doctest-modules --maxfail=1 --cov=neotomadoi"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

