[project]
name = "neotomadoi"
version = "0.1.0"
description = "Minting process for the Neotoma Paleoecology Database's DOIs using the DataCite API and the Neotoma API."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE.md"]
authors = [{ name = "Simon Goring", email = "goring@wisc.edu" }]
maintainers = [{ name = "Simon Goring", email = "goring@wisc.edu" }]
requires-python = ">=3.12"
keywords = ["DataCite", "Postgresql", "metadata", "Open Science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Hatch",
    "Framework :: Pytest",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "datacite>=1.2.0",
    "deepdiff>=8.4.2",
    "jsonschema>=4.23.0",
    "psycopg2>=2.9.10",
    "pyalex>=0.18",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "shapely>=2.1.0",
]

[project.urls]
"Source Code" = "https://github.com/NeotomaDB/neotomapydoi"
Funding = "https://nsf.gov/awardsearch/showAward?AWD_ID=2410961"
Issues = "https://github.com/NeotomaDB/neotomapydoi/issues"
download = "https://github.com/NeotomaDB/neotomapydoi/archive/refs/heads/main.zip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest-cov>=6.1.1", "pytest>=8.3.5"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocstrings[python]>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--doctest-modules --maxfail=1 --cov=neotomadoi"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line too long (let formatter handle it)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"] # Don't require docstrings in tests

[tool.coverage.run]
source = ["src/neotomadoi"]
omit = ["tests/*", "**/__pycache__/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
